sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var Tri = true
  while (Tri) {
    Tri= false
  
    for (i<-0 to getNombreValeurs()) {
      if plusPetit(i, i+1) {
        echange (i,i+1)
        Tri = true
        
      }
    }
  }
}
 
 